# hackathon

./: .env.example  .gitignore  Agents.MD  Projects_Summary.MD  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: dependencies.py  routes.py
app/audit/: __init__.py  repository.py
app/core/: config.py  logging.py  tracing.py
app/domain/: audit.py  llm_outputs.py  policy.py  retrieval.py  review.py  triggers.py
app/ingestion/: __init__.py  cli.py
app/llm/: __init__.py  claude_service.py
app/models/: __init__.py
app/prompts/: underwriting_review_v0_1.md
app/retrieval/: __init__.py  in_memory.py  interfaces.py
app/services/: trigger_engine.py
app/validators/: __init__.py  review_validator.py
app/workflows/: review_workflow.py
config/: trigger_rules.json
sample_data/guidelines/: homeowners_mock_guidelines.md
sample_data/policies/: high_risk_home_policy.json
tests/: test_review_workflow.py  test_trigger_engine.py
